# DeFi

./: CODEOWNERS  README.md  docker-compose.yml  package.json
backend/: .gitignore  1lzz6k4.md  DEVELOPMENT.md  README.md  behave.ini  build-container.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/chain_vission/: __init__.py  main.py
backend/chain_vission/adapter/: firebase.py  huawei.py  mongodb.py
backend/chain_vission/domain/: contract.py  investor.py  order.py  pagination.py  price.py  schema.py
backend/chain_vission/graphql/: schema.py
backend/chain_vission/graphql/domain/: contract.py  investor.py  order.py  price.py
backend/chain_vission/logger/: logs.py
backend/chain_vission/login/router/: __init__.py  nonce.py  signin.py  signout.py
backend/chain_vission/middleware/: authentication.py
backend/chain_vission/use_cases/graphql/: mutation.py  pagination.py  query.py  schema.py
backend/chain_vission/utils/: authentication.py  environment.py
backend/docker/: Dockerfile.api
backend/scripts/: poetry.py
backend/tests/: configtest.py
backend/tests/behave/features/: add_contract.feature  environment.py
backend/tests/integration/: utils.py
backend/tests/integration/contract/: contract_data.py  test_all_contracts.py
backend/tests/integration/investor/: investor_data.py  test_all_investors.py
backend/tests/integration/orders/: order_data.py  test_all_orders.py
backend/tests/integration/prices/: price_data.py  test_all_prices.py
frontend/tests/: README.md  pyproject.toml
frontend/tests/behave/features/: buy.feature  drawer.feature
smartcontracts/: .gitignore  Dockerfile.deploy  deploy-on-local.sh  foundry.toml  pyproject.toml
smartcontracts/scripts/: createFuture.sol  deploy.dao.local.sol  deploy.dao.testnet.sol  deploy.e2e.s.sol  deploy.e2e.sol  deploy.token.sol
smartcontracts/src/extracto/commodity/: Commodity.Crud.sol  Commodity.sol  (+2 more)
smartcontracts/src/token/: COW.Proxy.sol  ERC20.sol
smartcontracts/test/: BaseSetup.sol  BaseSetup.t.sol  README.md
smartcontracts/test/future/: Future.Withdraw.t.sol
(+303 files in other folders)
