[tool.poetry]
name = "extracto-dao-qa"
version = "0.1.0"
description = "test e2e for front-end"
authors = ["Lucas Oliveira <olivmath@protonmail.com>", "Joel Esteves <joel.esteves@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
behave = "^1.2.6"
pylint = "^2.15.3"
requests = "^2.28.1"
eth-ape = "^0.5.1"
pyclean = "^2.2.0"
selenium = "^4.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"